// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a chart item in a namespace 1`] = `
<InfoCard
  description={
    <div
      className="ListItem__content__description"
    />
  }
  icon="icon.png"
  info="1.0.0"
  key="foo1"
  link="/ns/repo-namespace/charts/repo-name/foo"
  tag1Class="repo-name"
  tag1Content={
    <Unknown
      className="ListItem__content__info_tag_link"
      to="/ns/repo-namespace/catalog/repo-name"
    >
      repo-name
    </Unknown>
  }
  title="foo"
/>
`;

exports[`should render a global chart item in a namespace 1`] = `
<InfoCard
  description={
    <div
      className="ListItem__content__description"
    />
  }
  icon="icon.png"
  info="1.0.0"
  key="foo1"
  link="/ns/repo-namespace/global-charts/repo-name/foo"
  tag1Class="repo-name"
  tag1Content={
    <Unknown
      className="ListItem__content__info_tag_link"
      to="/ns/repo-namespace/catalog/repo-name"
    >
      repo-name
    </Unknown>
  }
  title="foo"
/>
`;
